--- a/evian/evian.css
+++ b/evian/evian.css
@@ -20,7 +20,7 @@ padding-right: 50px;
 display: flex;
 align-items: center;
 justify-content: center;
-background-image: url(./evian_origins_logo.jpg);
+background-image: url(./evian_origins_logo.png);
 background-size: cover;
 height: 950px;
 }
